k8s/network-policies/apps/allow-demo-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-demo-to-backend
  namespace: apps
spec:
  podSelector: 
    matchLabels:
      app: backend-app # this policy applies TO backend-app pods
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: demo-app # Only allow FROM demo-app pods
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-demo-to-egress-backend
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: demo-app
  policyTypes:
    - Egress
  egress:
    - to: 
        - podSelector:
            matchLabels:
              app: backend-app
      ports:
        - protocol: TCP
          port: 8080
