k8s/network-policies/apps/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: apps
spec:
  podSelector: { }
  policyTypes:
    - Egress
    - Ingress
